@@ -1,3 +1,9 @@
+2004-09-26  Richard Henderson  <rth@redhat.com>
+
+	* sysdeps/alpha/alphaev6/memcpy.S: Mark .prologue.
+	* sysdeps/unix/alpha/sysdep.h (LEAF, ENTRY): Align entry points
+	to 16 byte boundaries.
+
 2004-09-26  Ulrich Drepper  <drepper@redhat.com>
 
 	* elf/readlib.c (process_file): Before complaining about too-short
